# trust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
docs/: SETUP.md
docs/superpowers/plans/: 2026-07-06-trust-phase1-api-egress.md  2026-07-06-trust-phase2-jwt-auth.md  2026-07-07-trust-phase3-git-cache.md
docs/superpowers/specs/: 2026-07-06-trust-egress-proxy-design.md  2026-07-06-trust-phase2-jwt-auth-design.md  2026-07-07-trust-phase3-git-cache-design.md
examples/anthropic-js/: README.md  config.toml  package.json  query.mjs
examples/kubernetes/: README.md  client-ca-issuer.yaml  client-certificate.yaml  client-workload.yaml  deployment.yaml  gcp-wif-smoke-test.yaml  namespaces.yaml  sandbox-egress-network-policy.yaml  token-network-policy.yaml
examples/linear-js/: README.md  config.toml  package.json  query.mjs
scripts/: dev-certs.sh  dev-egress-mitm-ca.sh  gen-signing-key.sh  mint-jwt.sh
src/: auth.rs  config.rs  connect.rs  credentials.rs  decision.rs  github_cli.rs  inject.rs  jwt.rs  keystore.rs  lib.rs  main.rs  metrics.rs  proxy.rs  resource.rs  router.rs  scope.rs
src/git/: backend.rs  classify.rs  mirror.rs  mod.rs  sync.rs
src/issuance/: mod.rs  mtls.rs  policy.rs  server.rs
src/mitm/: ca.rs  io.rs  mod.rs  proxy.rs  runtime.rs
src/secrets/: fake.rs  gcp.rs  mod.rs
tests/: api_egress.rs  gcp_workload_identity.rs  git_cache.rs  jwt_egress.rs  kubernetes_examples.rs
