[package]
name = "trust"
version = "0.1.0"
edition = "2024"

[lib]
name = "trust"
path = "src/lib.rs"

[[bin]]
name = "trust"
path = "src/main.rs"

[dependencies]
pingora = { version = "0.8", features = ["proxy", "openssl"] }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
url = "2"
base64 = "0.22"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
google-cloud-secretmanager-v1 = "1.10"
google-cloud-gax = "0.24"
