[package]
name = "trust"
version = "0.1.0"
edition = "2024"

[lib]
name = "trust"
path = "src/lib.rs"

[[bin]]
name = "trust"
path = "src/main.rs"

[dependencies]
pingora = { version = "0.8", features = ["proxy", "openssl"] }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
url = "2"
base64 = "0.22"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
google-cloud-secretmanager-v1 = "1.10"
google-cloud-gax = "0.24"
jsonwebtoken = { version = "10.4", features = ["aws_lc_rs", "use_pem"] }
p256 = { version = "0.13", features = ["pem", "pkcs8"] }
arc-swap = "1"
humantime = "2"
axum = "0.8"
axum-server = { version = "0.8", features = ["tls-rustls-no-provider"] }
axum-server-mtls = "0.1"
rustls = "0.23"
rustls-pemfile = "2"
x509-parser = "0.18"
serde_json = "1.0.150"

[dev-dependencies]
rcgen = { version = "0.14", features = ["pem", "x509-parser"] }
tower = { version = "0.5", features = ["util"] }
tempfile = "3"
